rspec-tools/tests/resources/invalid-asciidoc/unbalanced_double_backquotes.adoc
This is a test for double
backquotes``next to text

We shouldn't raise on this``double backquote usage``.